# enterprise-customer-service-agent-v2

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
assets/: Agent链路图谱.html
knowledge_base/: README.md  evaluation_queries.json
knowledge_base/announcements/: 618价保活动公告.md  春节物流时效公告.md
knowledge_base/benefits/: 企业客户服务权益.md  会员售后权益.md
knowledge_base/faq/: 订单与物流常见问题.md  退款到账常见问题.md
knowledge_base/manuals/: 小家电安装与保养手册.md  智能耳机使用与保修手册.md
knowledge_base/matrices/: 售后赔付标准矩阵.md  商品类目退换限制矩阵.md
knowledge_base/merchant/: 商家履约与举证规则.md  平台介入处理规则.md
knowledge_base/policies/: 七天无理由退货政策.md  质量问题退换货政策.md
knowledge_base/risk/: 异常退款与凭证规则.md  账户与支付安全提醒.md
knowledge_base/sla/: 企业客户响应时效.md  重大故障升级机制.md
knowledge_base/sop/: 投诉升级与转人工流程.md  退款申请处理流程.md
knowledge_base/troubleshooting/: 充电与电源故障排查.md  智能耳机故障排查.md
migrations/: env.py
scripts/: check_env.py  evaluate_retrieval.py  ingest_docs.py  init_db.py  run_after_sales_mcp_server.py  run_dev.py  seed_sample_data.py
src/customer_service_app/: main.py
tests/: test_confirmations_and_mcp.py  test_conversation_service.py  test_cost_governance_service.py  test_customer_service_graph.py  test_human_support_models.py  test_human_support_service.py  test_hybrid_rag.py  test_knowledge_corpus.py  test_markdown_chunker.py  test_mcp_approval.py  test_opensearch_bm25.py  test_ops_service.py  test_plan_executor.py  test_planner_service.py  test_question_rewrite_service.py  test_react_executor.py  test_retrieval_quality.py  test_semantic_cache.py  test_vector_store_factory.py
(+94 files in other folders)
